# python-project-52

./: .example_env  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: data.json  labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0002_initial.py
task_manager/templates/: create_user.html  dataframe_template.html  delete_form.html  delete_user.html  edit_user.html  execute.html  footer.html  form.html  general_button.html  header.html  home.html  index.html  operation.html
task_manager/templates/labels/: label_list.html
task_manager/templates/statuses/: status_list.html
task_manager/templates/tasks/: task_info.html  task_list.html
task_manager/templates/users/: create_user.html  delete_user.html  edit_user.html  user_list.html  user_list1.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
